# fanqieclock

./: CMakeLists.txt  README.md  circularprogressbar.cpp  circularprogressbar.h  floatingwidget.cpp  floatingwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingsdialog.cpp  settingsdialog.h
